--- a/NeuroeconomicsUZH/Readme
+++ b/NeuroeconomicsUZH/Readme
@@ -1,1 +1,7 @@
 I took Neuroeconomics taught by Professor Dr. Todd Hare in my first semester (Fall 2022) in the IDB Program. This class was an elective class. I enjoyed it very much and passed it with a 5.75/6.
+Here, you can find the lecture notes I wrote as a pdf file.
+The other folder contains the components that you can upload to Overleaf to edit and improve the notes. 
+
+Best of luck in your studies,
+
+Ata
