--- a/BrainBiology/Readme
+++ b/BrainBiology/Readme
@@ -1,1 +1,6 @@
 Here you will find my Brain Biology Block Course (12 ECTS) Lecture Notes. One document will be the typeset pdf and the other documents will allow you to import the project into Overleaf and then edit the document.
+I received a 5.5/6 as a grade from this class.
+
+Best of luck in your studies,
+
+Ata
